# Cerebra

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cerebra/agents/: base.py  data_agent.py  ehr_agent.py  image_agent.py  lightweight_agent.py  note_agent.py  summary_agent.py
cerebra/agents/modules/: __init__.py  executor.py  formatters.py  initializer.py  memory.py  planner.py  utils.py
cerebra/agents/prompts/: Untitled  ehr_agent.py  note_agent.py  super_agent.py
cerebra/engine/: factory.py  openai.py
cerebra/orchestrator/: base.py  super_agent.py
cerebra/tools/: base.py
cerebra/tools/data_agent/: README.md
cerebra/tools/data_agent/exploration_mode/: tool.py
cerebra/tools/data_agent/inference_mode/: tool.py
cerebra/tools/data_agent/training_mode/: tool.py
cerebra/tools/ehr_agent/ehr_model_inference/: __init__.py  tool.py
cerebra/tools/ehr_agent/ehr_model_trainer/: __init__.py  tool.py
cerebra/tools/image_agent/image_analyzer/: __init__.py  tool.py
cerebra/tools/image_agent/image_model_inference/: __init__.py  tool.py  utils.py
cerebra/tools/image_agent/image_model_trainer/: __init__.py  tool.py
cerebra/tools/note_agent/models/: sentence_attention.py
cerebra/tools/note_agent/note_model_inference/: __init__.py  tool.py
cerebra/utils/: dataset.py  ehr_headers.py  log_utils.py  metadata.py  utils.py
dataset/example_1/: X_ehr_test.pkl  X_mri_test_file_path.txt  X_mri_test_volume.csv  X_note_test.pkl  demographics_info_test.pkl
tasks/: run_cerebra.py
tests/: test_data_agent_local.py  test_e2e_local.py
(+5 files in other folders)
